--- a/po/ja.po
+++ b/po/ja.po
@@ -12,111 +12,111 @@ msgstr ""
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: data/resources/ui/list_row.blp:33 data/resources/ui/main_win.blp:26
 msgid "Name"
-msgstr ""
+msgstr "名前"
 
 #: data/resources/ui/list_row.blp:42
 msgid "Expiration"
-msgstr ""
+msgstr "期限"
 
 #: data/resources/ui/list_row.blp:49
 msgid "Delete"
-msgstr ""
+msgstr "削除"
 
 #: data/resources/ui/main_win.blp:42
 msgid "Add"
-msgstr ""
+msgstr "追加"
 
 #: data/resources/ui/main_win.blp:88
 msgid "About ExpMgr"
-msgstr ""
+msgstr "ExpMgrについて"
 
 #: data/resources/ui/main_win.blp:89 data/resources/ui/shortcuts_win.blp:17
 msgid "Keyboard Shortcuts"
-msgstr ""
+msgstr "キーボードショートカット"
 
 #: data/resources/ui/shortcuts_win.blp:7
 msgid "General"
-msgstr ""
+msgstr "全般"
 
 #: data/resources/ui/shortcuts_win.blp:9
 msgid "Quit"
-msgstr ""
+msgstr "終了する"
 
 #: data/resources/ui/shortcuts_win.blp:13
 msgid "Open menu"
-msgstr ""
+msgstr "メニューを開く"
 
 #: data/resources/ui/shortcuts_win.blp:22
 msgid "Editing"
-msgstr ""
+msgstr "編集"
 
 #: data/resources/ui/shortcuts_win.blp:24
 msgid "Create a new item"
-msgstr ""
+msgstr "新しいアイテムを作成する"
 
 #: data/resources/ui/shortcuts_win.blp:28
 msgid "Create a new list"
-msgstr ""
+msgstr "新しいリストを作成する"
 
 #: expmgr/list_view.py:26
 msgid "Expired"
-msgstr ""
+msgstr "期限切れ"
 
 #: expmgr/list_view.py:29
 msgid "Others"
-msgstr ""
+msgstr "その他"
 
 #: expmgr/list_view.py:134
 msgid "Today"
-msgstr ""
+msgstr "今日"
 
 #: expmgr/list_view.py:136
 msgid "Tomorrow"
-msgstr ""
+msgstr "明日"
 
 #: expmgr/list_view.py:138
 #, python-brace-format
 msgid "{n} days"
-msgstr ""
+msgstr "{n}日"
 
 #: expmgr/list_view.py:141
 msgid "Next week"
-msgstr ""
+msgstr "来週"
 
 #: expmgr/list_view.py:143
 #, python-brace-format
 msgid "{n} weeks"
-msgstr ""
+msgstr "{n}週"
 
 #: expmgr/list_view.py:146
 msgid "Next month"
-msgstr ""
+msgstr "来月"
 
 #: expmgr/list_view.py:148
 #, python-brace-format
 msgid "{n} months"
-msgstr ""
+msgstr "{n}月"
 
 #: expmgr/list_view.py:151
 msgid "Next year"
-msgstr ""
+msgstr "来年"
 
 #: expmgr/list_view.py:153
 #, python-brace-format
 msgid "{n} years"
-msgstr ""
+msgstr "{n}年"
 
 #: expmgr/main.py:47
 msgid "Manage expiry dates"
-msgstr ""
+msgstr "期限を管理"
 
 #: expmgr/main_win.py:71
 msgid "A list with that name already exists."
-msgstr ""
+msgstr "その名前のリストはすでに存在します。"
